--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 lambda_runtime = "0.13.0"
 lambda_http = "0.13.0"
 mockall = "0.13.0"
-serde = "1.0.136"
+serde = "1.0.209"
 tokio = { version = "1", features = ["full"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = [
@@ -15,7 +15,8 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 ] }
 aws-config = "1.5.5"
 aws-sdk-dynamodb = "1.42.0"
-uuid = { version = "1.2", features = ["v4"] }
+uuid = { version = "1.10.0", features = ["v4"] }
+async-trait = "0.1.81"
 
 [[bin]]
 name = "create_product"
